Fixing mobile stylying for right aligned address

--- a/scss/illinois-framework/_paragraphs.contact-info.scss
+++ b/scss/illinois-framework/_paragraphs.contact-info.scss
@@ -24,6 +24,10 @@
         }
         &.right p {
           text-align: right;
+          @include media-breakpoint-down(md) {
+            text-align: center !important
+          }
+
         }
         &.right {
           text-align: right;
